<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eff1f4"
    android:orientation="vertical">

    <com.netease.yunxin.kit.entertainment.common.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBar_title="@string/app_pstn_setting_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:background="@drawable/bg_circle_rect"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_high_keep_alive_feature"
                        android:textColor="@color/color_333333"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/switch_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:checked="false"
                        android:switchMinWidth="46dp"
                        android:thumb="@drawable/video_group_switch_thumb"
                        android:track="@drawable/video_group_switch_track"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:background="@android:color/holo_green_dark"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_setting"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <TextView
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_height="50dp"
                        android:text="@string/float_permission"
                        android:textColor="@color/color_333333"
                        android:textSize="16sp" />
                    <ImageView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/iv_right_arrow"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_right_arrow"
                        android:contentDescription="@string/app_default_content_description" />
                    <TextView
                        android:gravity="center"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_gravity="right"
                        android:paddingRight="40dp"
                        android:id="@+id/tv_float_permission"
                        tools:text=""
                        android:textColor="@color/color_333333"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:layout_marginTop="24dp"
                android:text="@string/float_permission_desc"
                android:textColor="@color/color_333333"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/app_high_keep_alive_title_level1"
                android:textColor="@color/color_222222"
                android:textSize="16sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_high_keep_alive_content2"
                android:textColor="@color/color_333333"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_333333"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>