<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022 NetEase, Inc. All rights reserved. -->
<!-- Use of this source code is governed by a MIT license that can be -->
<!-- found in the LICENSE file. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_data_center_tips"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/tv_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_data_center_switch_confirm_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/tv_dialog_negative"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/line_bottom"
            android:layout_alignEnd="@id/line_divide"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/app_no"
            android:textColor="@color/color_333333"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_dialog_positive"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/line_bottom"
            android:layout_alignStart="@id/line_divide"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/app_yes"
            android:textColor="#007AFF"
            android:textSize="17sp" />

        <View
            android:id="@+id/line_divide"
            android:layout_width="0.5dp"
            android:layout_height="46dp"
            android:layout_below="@id/line_bottom"
            android:layout_centerHorizontal="true"
            android:background="@color/color_0c000050" />

        <View
            android:id="@+id/line_bottom"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv_dialog_content"
            android:layout_marginTop="20dp"
            android:background="@color/color_0c000050" />
    </RelativeLayout>

</RelativeLayout>