<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6171723">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:src="@drawable/icon_create_room_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/create_room"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_room_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/room_name"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <RelativeLayout
            android:id="@+id/rl_room_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/entertainment_shape_create_room_edit_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_room_name_title">

            <EditText
                android:id="@+id/et_room_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="13dp"
                android:layout_toLeftOf="@+id/iv_random"
                android:background="@color/color_00000000"
                android:ellipsize="end"
                android:gravity="top"
                android:maxLength="20"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:id="@+id/iv_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="13dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_create_room_random_name" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_bg_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="12dp"
            android:text="@string/room_bg_select"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_room_name" />

        <com.netease.yunxin.kit.entertainment.common.widget.SelectRoomBgView
            android:id="@+id/select_room_bg_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_bg_select_title" />

        <TextView
            android:id="@+id/tv_create_room"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_create_room_btn_chat_room_bg"
            android:gravity="center"
            android:text="@string/start_room"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>